Set up project structure and dependencies

--- a/resources/css/style-inscription.css
+++ b/resources/css/style-inscription.css
@@ -6,7 +6,7 @@
 }
 
 /* Style pour le bouton de fermeture du menu mobile */
-#nav-mobile-btn.close span:first-child {
+/* #nav-mobile-btn.close span:first-child {
     transform: rotate(45deg);
     top: 4px;
     background: #a0aec0;
@@ -15,7 +15,7 @@
 #nav-mobile-btn.close span:nth-child(2) {
     transform: rotate(-45deg);
     background: #a0aec0;
-}
+} */
 
 /* ----------- MODAL STYLES ----------- */
 .modal {
